Edit button almost done

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,7 +35,7 @@
               <td><%= id %></td>
               <td><%= urls[id] %></td>
               <td>
-                <form method="POST" action="/urls/show/<%= id%>/">
+                <form method="POST" action="/urls/<%= id %>/">
                   <button type="submit" class="btn btn-primary">Edit</button>
                 </form>
               </td>
