--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,10 +17,22 @@
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
-      <form method="POST" action="/login">
-        <input type="text" id="username" name="username" placeholder="Username">
-        <button type="submit">Login</button>
-      </form>
+      
+      <% if (username) { %>
+        <span class="navbar-text">
+          Logged in as <%= username %>
+        </span>
+      <% } else { %>
+        <form method="POST" action="/login">
+          <input type="text" id="username" name="username" placeholder="Username">
+          <button type="submit">Login</button>
+        </form>
+        <% } %>
+
     </div>
   </nav>
 </header>
+
+<!-- <script
+const templateVars = { username: };>
+</script> -->
