--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,6 +22,9 @@
         <span class="navbar-text">
           Logged in as <%= username %>
         </span>
+        <form method="POST" action="/logout">
+          <button type="submit">Logout</button>
+        </form>
       <% } else { %>
         <form method="POST" action="/login">
           <input type="text" id="username" name="username" placeholder="Username">
