--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -26,8 +26,7 @@
           <button type="submit">Logout</button>
         </form>
       <% } else { %>
-        <form method="POST" action="/login">
-          <input type="text" id="username" name="username" placeholder="Username">
+        <form method="GET" action="/login">
           <button type="submit">Login</button>
         </form>
         <% } %>
