Finalize login routes

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
         <input type="email" name="email">
         <label>Enter password:</label>
         <input type="password" name="password">
-        <button type="submit" class="btn btn-primary">Submit</button>
+        <button type="submit" class="btn btn-primary">Login</button>
       </form>
     </main>
   </body>
