Touch up prior to first (hopefully last) submission

--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -24,7 +24,7 @@
       <div class="card-footer text-muted"></div>
       <form class="form-inline" action="/urls" method="POST">
         <div class="form-group mb-2">
-          <label for="longURL">Enter a URL:</label>
+          <label for="longURL">Create another URL?:</label>
           <input
             class="form-control"
             type="text"
